- add basic cards and styling for units

--- a/index.html
+++ b/index.html
@@ -20,5 +20,56 @@
   </head>
   <!-- 3. Display the application -->
   <body>
+    <section id="enemy-board">
+        <h1>Boss</h1>
+        <div class="enemy-list">
+            <div class="enemy unit-card">
+                <h2>Dragon</h2>
+                <hr/>
+                <div class="hit-points">HP: <span class="current-hit-points">2500</span> / <span class="maximum-hit-points">2500</span></div>
+                <div class="mana">MP: <span class="current-mana">500</span> / <span class="maximum-mana">500</span></div>
+            </div>
+        </div>
+    </section>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <section id="player-board">
+        <h1>Your Party</h1>
+        <div class="player-list">
+            <div class="player unit-card">
+                <h2>Barbarian</h2>
+                <hr/>
+                <div class="hit-points">HP: <span class="current-hit-points">100</span> / <span class="maximum-hit-points">100</span></div>
+                <div class="mana">MP: <span class="current-mana">20</span> / <span class="maximum-mana">20</span></div>
+                <br/>
+                <div class="move-list">
+                    <button class="move">Attack</button>
+                </div>
+            </div>
+            <div class="player unit-card">
+                <h2>Healer</h2>
+                <hr/>
+                <div class="hit-points">HP: <span class="current-hit-points">50</span> / <span class="maximum-hit-points">50</span></div>
+                <div class="mana">MP: <span class="current-mana">100</span> / <span class="maximum-mana">100</span></div>
+                <br/>
+                <div class="move-list">
+                    <button class="move">Attack</button>
+                </div>
+            </div>
+            <div class="player unit-card">
+                <h2>Rogue</h2>
+                <hr/>
+                <div class="hit-points">HP: <span class="current-hit-points">75</span> / <span class="maximum-hit-points">75</span></div>
+                <div class="mana">MP: <span class="current-mana">75</span> / <span class="maximum-mana">75</span></div>
+                <br/>
+                <div class="move-list">
+                    <button class="move">Attack</button>
+                </div>
+            </div>
+        </div>
+    </section>
   </body>
 </html>
