--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="mana">MP: <span class="current-mana">20</span> / <span class="maximum-mana">20</span></div>
                 <br/>
                 <div class="move-list">
-                    <button class="move">Attack</button>
+                    <button class="move attack">Attack</button>
                 </div>
             </div>
             <div class="player unit-card">
@@ -56,7 +56,7 @@
                 <div class="mana">MP: <span class="current-mana">100</span> / <span class="maximum-mana">100</span></div>
                 <br/>
                 <div class="move-list">
-                    <button class="move">Attack</button>
+                    <button class="move attack">Attack</button>
                 </div>
             </div>
             <div class="player unit-card">
@@ -66,7 +66,7 @@
                 <div class="mana">MP: <span class="current-mana">75</span> / <span class="maximum-mana">75</span></div>
                 <br/>
                 <div class="move-list">
-                    <button class="move">Attack</button>
+                    <button class="move attack">Attack</button>
                 </div>
             </div>
         </div>
