--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <div class="mana">MP: <span class="current-mana">75</span> / <span class="maximum-mana">75</span></div>
                 <br/>
                 <div class="move-list">
-                    <button class="move attack">Attack</button>
+                    <button class="move attack">Poison Strike</button>
                 </div>
             </div>
         </div>
