--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
     <!-- 3. libs -->
-    <script src="app/vendor/rx.js"></script>
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
@@ -56,7 +55,7 @@
                 <div class="mana">MP: <span class="current-mana">100</span> / <span class="maximum-mana">100</span></div>
                 <br/>
                 <div class="move-list">
-                    <button class="move attack">Attack</button>
+                    <button class="move shield">Shield</button>
                 </div>
             </div>
             <div class="player unit-card">
